--- a/src/style.css
+++ b/src/style.css
@@ -9,9 +9,13 @@ body {
     font-family: arial;
 }
 
+* {
+    box-sizing: border-box;
+}
+
 #container {
     height: 100%;
-    width: 70%;
+    width: 65%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -26,6 +30,7 @@ body {
 
 .node {
     cursor: pointer;
+    transition: opacity 0.25s;
 }
 
 .nodeTextBox {
@@ -48,6 +53,12 @@ body {
     pointer-events: none;
 }
 
+.nodeTitleBox_ {
+    cursor: default;
+    user-select: none;
+    pointer-events: none;
+}
+
 .nodeLecturer {
     letter-spacing: 0.05em;
     font-size: 2vh;
@@ -61,7 +72,7 @@ body {
 
 .sideBar {
     height: 100%;
-    width: 30%;
+    width: 35%;
     position: fixed;
     top: 0;
     right: 0;
