--- a/src/style.css
+++ b/src/style.css
@@ -28,6 +28,12 @@ body {
     font-size: 10pt;
 }
 
+#topicView {
+    width: 100%;
+    height: 100%;
+    font-size: 10pt;
+}
+
 .node {
     cursor: pointer;
     transition: opacity 0.25s;
@@ -83,17 +89,22 @@ body {
 
 .sideBarTop {
     display: flex;
-    align-items: center;
+    justify-content: space-between;
     margin-bottom: var(--side_margin);
 }
 
 .sideBarTitle {
-    width: 100%;
-    margin: 2vh;
-    font-size: 3.8vh;
-    letter-spacing: 0.1em;
-    line-height: 1.6em;
-    text-transform: uppercase;
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.sideBarTitleSpacing {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: 2vw;
 }
 
 .searchBarContainer {
@@ -162,13 +173,13 @@ body {
     line-height: 1.75em;
 }
 
-.video-js {
-    width: initial !important;
-    height: 35vh !important;
-    margin-left: 0.5vw !important;
-    margin-right: 0.5vw !important;
-    margin-top: 3vh !important;
-    margin-bottom: 3vh !important;
+#ytvideo {
+    width: 100%;
+    height: 35vh;
+    margin-left: 0.5vw;
+    margin-right: 0.5vw;
+    margin-top: 3vh;
+    margin-bottom: 3vh;
 }
 
 .noBox {
