--- a/src/style.css
+++ b/src/style.css
@@ -85,16 +85,18 @@ body {
     background: #d6e8d5;
     padding: var(--side_margin);
     transition: width 0.5s;
+    overflow-y: scroll;
 }
 
 .sideBarTop {
     display: flex;
+    align-items: center;
     justify-content: space-between;
     margin-bottom: var(--side_margin);
 }
 
 .sideBarTitle {
-    width: 70%;
+    width: 75%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -104,7 +106,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    font-size: 2vw;
+    font-size: 1.5vw;
 }
 
 .searchBarContainer {
@@ -171,6 +173,7 @@ body {
 .videoSummary {
     font-size: 2vh;
     line-height: 1.75em;
+    text-align: justify;
 }
 
 #ytvideo {
