--- a/src/SideBar.css
+++ b/src/SideBar.css
@@ -1,5 +1,10 @@
 :root {
-    --side_margin: 3vw;
+    --sideMargin: 3vw;
+    --darkColor: #BBCCC9;
+    --middleColor: #CFDEDA;
+    --middleColor2: #DEEDE7;
+    --middleColor3: #E9F7EF;
+    --lightColor: #FAFFFB
 }
 
 .sideBar {
@@ -8,8 +13,8 @@
     position: fixed;
     top: 0;
     right: 0;
-    background: #d6e8d5;
-    padding: var(--side_margin);
+    background: var(--middleColor3);
+    padding: var(--sideMargin);
     transition: width 0.5s;
     overflow-y: scroll;
 }
@@ -17,15 +22,18 @@
 .sideBarTop {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    margin-bottom: var(--side_margin);
 }
 
 .sideBarTitle {
-    width: 75%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    margin-left: 1vw;
+    font-size: 1vw;
+}
+
+.sideBarSubTitle {
+    margin-top: 1em;
+    width: 100%;
+    text-align: center;
+    font-size: 1.5vw;
 }
 
 .sideBarTitleSpacing {
@@ -43,7 +51,7 @@
 .searchBarContainer:focus-within {
     outline-style: solid;
     outline-width: thin;
-    outline-color: #a5e2ff;
+    outline-color: var(--darkColor);
 }
 
 .searchBar {
