--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
     --middleColor2: #e1e8ce;
     --middleColor3: #f7f9ef;
     --lightColor: #FAFFFB;
+    --textMain: #000;
+    --textAlt: #333;
 }
 
 html,
@@ -16,6 +18,7 @@ body {
 
 * {
     box-sizing: border-box;
+    color: var(--textMain);
 }
 
 #container {
