--- a/src/SideBar.css
+++ b/src/SideBar.css
@@ -16,6 +16,10 @@
     margin-bottom: 1vw;
 }
 
+#sideBarFrontLabel {
+    font-size: 1.2vw;
+}
+
 .searchBarContainer {
     padding: 0.6vw;
     background: #f8f8f8;
@@ -105,6 +109,7 @@
 }
 
 #ytvideo {
+    display: block;
     width: 100%;
     height: 35vh;
     padding-left: 0.5vw;
