--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
 html,
 body {
     margin: 0;
+    width: 100%;
     height: 100%;
     font-family: arial;
 }
@@ -41,7 +42,7 @@ body {
 }
 
 #siteLogo {
-    height: 100%;
+    height: 150%;
 }
 
 #siteAbout {
@@ -53,10 +54,16 @@ body {
 }
 
 #aboutContainer {
+    left: 0;
+    top: 0;
     display: flex;
-    width: 65%;
+    width: 100%;
     height: 100%;
     align-items: center;
+    position: absolute;
+    transition: visibility 0.5s, opacity 0.5s;
+    background: #FFF;
+    visibility: hidden;
 }
 
 #aboutContent {
@@ -73,6 +80,7 @@ body {
     align-items: center;
     justify-content: center;
     transition: width 0.5s;
+    position: relative;
 }
 
 .graph {
