--- a/src/SideBar.css
+++ b/src/SideBar.css
@@ -66,7 +66,7 @@
 }
 
 .videoListItemDate {
-    font-size: 0.8vw;
+    font-size: 0.8rem;
     margin-bottom: 0.5em;
     color: var(--textAlt);
 }
