--- a/src/index.css
+++ b/src/index.css
@@ -26,9 +26,8 @@ body {
 #siteTitle {
     font-weight: normal;
     height: 2rem;
-    position: absolute;
-    left: var(--sideMargin);
-    top: var(--sideMargin);
+    margin-left: var(--sideMargin);
+    margin-top: var(--sideMargin);
     display: flex;
     align-items: center;
 }
@@ -78,15 +77,14 @@ body {
     height: 100%;
     width: 65%;
     display: flex;
-    align-items: center;
-    justify-content: center;
     transition: width 0.5s;
     position: relative;
+    flex-direction: column;
 }
 
 .graph {
     width: 100%;
-    height: 100%;
+    height: 100%
 }
 
 #topicView {
