Added Susan Rogers lecture, updated Chafe URL, fixed about

--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,7 @@ body {
     transition: visibility 0.5s, opacity 0.5s;
     background: #FFF;
     visibility: hidden;
+    cursor: pointer;
 }
 
 #aboutContent {
